Added display of the current time

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="weather">
             <div class="weather__show">
-                <h1 class="city-name">Погода на сегодня в Тюмени</h1>
-                <p>Сейчас 20:29</p>
+                <h1 class="city-name">Тюмень</h1>
+                <p class="current-time">Сейчас 20:29</p>
                 <div class="current-weather">
                     <p class="temperature">+4°C</p>
                     <img class="wheather-icon" src="./img/Weather/cloud-moon-solid.svg" alt="wheather-icon"/>
