Added the ability to select a city

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <div class="weather__get">
                 <h2>Введите город</h2>
-                <input type="text" class="city">
-                <button class="getWeather">Запросить погоду</button>
+                <input type="text" class="city-input">
+                <button class="get-weather">Запросить погоду</button>
             </div>
         </div><!-- /.weather -->
     </div>
