fixed function of getting current time

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Задания</title>
+    <title>Wheather</title>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
 
             <div class="weather__get">
                 <h2>Введите город</h2>
-                <input type="text" class="city-input">
+                <input type="text" class="city-input" placeholder="Название города">
                 <button class="get-weather">Запросить погоду</button>
             </div>
             
