added correct display of city name

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="weather">
             <!-- .weather__show -->
             <div class="weather__show">
-                <h1 class="city-name">Тюмень</h1>
-                <p class="current-time">Сейчас 20:29</p>
+                <h1 class="city-name"></h1>
+                <p class="current-time"></p>
                 <div class="current-weather">
                     <div class="current-weather__top">
-                        <p class="temperature">+4°C</p>
+                        <p class="temperature"></p>
                         <img class="wheather-icon" src="./img/Weather/cloud-moon-solid.svg" alt="wheather-icon"/>
                         <p class="description">Снежно</p>
                     </div>
                     <div class="current-weather__bottom">
-                        <p class="wind">3,4 м/с, ЮЗ</p>
-                        <p class="humidity">88%</p>
-                        <p class="pressure">750 мм рт. ст.</p>
+                        <p class="wind"></p>
+                        <p class="humidity"</p>
+                        <p class="pressure"></p>
                     </div>
                     
                 </div>
