Added a change of background depending on the weather

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Wheather</title>
+    <title>Weather</title>
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" style="background: url('./img/clouds-bg.jpg') no-repeat; background-size: cover;" >
         <!-- weather -->
         <div class="weather">
             <!-- .weather__show -->
@@ -17,7 +17,7 @@
                 <div class="current-weather">
                     <div class="current-weather__top">
                         <p class="temperature"></p>
-                        <img class="wheather-icon" src="./img/Weather/cloud-moon-solid.svg" alt="wheather-icon"/>
+                        <img class="weather-icon" src="./img/Weather/cloud-moon-solid.svg" alt="wheather-icon"/>
                         <p class="description">Снежно</p>
                     </div>
                     <div class="current-weather__bottom">
