--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css" >
     <title>Weather</title>
 </head>
 <body>
 
-    <div class="container" style="background: url('./img/clouds-bg.jpg') no-repeat; background-size: cover;" >
+    <div class="container" style="background: url('./img/Clear-bg.jpg') no-repeat; background-size: cover;" >
         <!-- weather -->
         <div class="weather">
             <!-- .weather__show -->
@@ -18,7 +19,7 @@
                     <div class="current-weather__top">
                         <p class="temperature"></p>
                         <img class="weather-icon" src="./img/Weather/cloud-moon-solid.svg" alt="wheather-icon"/>
-                        <p class="description">Снежно</p>
+                        <p class="description"></p>
                     </div>
                     <div class="current-weather__bottom">
                         <p class="wind"></p>
