Added drop-down list of cities

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <div class="weather__get">
                 <h2>Введите город</h2>
                 <input type="text" class="city-input" placeholder="Название города">
+                <div class="cities__list"></div>
+                
                 <button class="get-weather">Запросить погоду</button>
             </div>
             
